About Page added

--- a/pages/Non veg.html
+++ b/pages/Non veg.html
@@ -69,9 +69,9 @@
         }
 
         .item-name {
-            font-size: 40px;
+            font-size: 30px;
             position: absolute;
-            top: 460px;
+            top: 500px;
             left: 10px;
         }
 
@@ -96,13 +96,14 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
-                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
-                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
-                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
-                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Chinese</a>
-                </li>
+                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../pages/about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+                <li><a href="../pages/community.html"><i class="fa-solid fa-users" aria-hidden="true"></i> Join Us</a></li>
 
             </ul>
         </div>
@@ -115,7 +116,7 @@
         <h3 class="sub-heading">Enjoy Your favourite Non-Veg Recipies here!</h3>
         <div class="row">
             <div class="card">
-                <a href="../pages/non-veg/Chickenmasala.html"><img src="../images/non-veg/chicken-masala.webp" /></a>
+                <a href="../pages/non-veg/Chickenmasala.html"><img src="../images/non-veg/chicken-masala.jpg" /></a>
                 <h2 class="item-name">Chicken Masala</h2>
             </div>
 
@@ -131,13 +132,13 @@
         </div>
         <div class="row">
             <div class="card">
-                <a href="../pages/non-veg/ChickenLollipop.html"><img src="../images/non-veg/Chicken-lolipop.webp" /></a>
+                <a href="../pages/non-veg/ChickenLollipop.html"><img src="../images/non-veg/Chicken-lolipop.jpg" /></a>
                 <h2 class="item-name">Chicken Lollipop</h2>
             </div>
 
             <div class="card">
                 <a href="../pages/non-veg/Biryani.html"> <img src="../images/non-veg/Chicken-Biryani-Recipe.jpg" /></a>
-                <h2 class="item-name">Chicken-Biryani</h2>
+                <h2 class="item-name" style="color: white;">Chicken-Biryani</h2>
             </div>
 
             <div class="card">
@@ -152,7 +153,7 @@
             Now!</h3>
         <p>Join our Community and add on your own recipies! <br />Also get chance to interact with some world famous
             chef's and get featured on our page!</p>
-        <button class="btn">Join Now</button><br />
+        <a href="../pages/community.html"><button class="btn">Join now</button></a><br />
     </div>
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
