--- a/pages/chinese.html
+++ b/pages/chinese.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../css/starters.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../images/chef.png" />
- 
+
     <style>
-            @media screen and (min-width:992px) {
+        @media screen and (min-width:992px) {
             .row {
                 display: flex;
             }
@@ -97,21 +97,23 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
-                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
-                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
-                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
-                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Chinese</a>
-                </li>
-
+                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../pages/about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+                <li><a href="../pages/community.html"><i class="fa-solid fa-users" aria-hidden="true"></i> Join Us</a></li>
             </ul>
         </div>
     </div>
     <div class="container">
         <h1 class="page-heading">Chinese</h1>
-      
-             <p>Though Asian cuisines have mixed throughout history throughout Asia, the most popular origin story of the fusion food resides with Chinese labourers of Calcutta (now called Kolkata), who immigrated to British Raj India looking for work.</b></p>
+        <hr>
+        <p>Though Asian cuisines have mixed throughout history throughout Asia, the most popular origin story of the
+            fusion food resides with Chinese labourers of Calcutta (now called Kolkata), who immigrated to British Raj
+            India looking for work.</b></p>
 
         <h3 class="sub-heading">Enjoy Your favourite Chinese Recipies here!</h3>
         <div class="row">
@@ -119,9 +121,10 @@
                 <a href="../pages/chinese/hakka-noodles.html"><img src="../images/chinese/hakka-noodles.jpg" /></a>
                 <h2 class="item-name">Hakka-noodles</h2>
             </div>
-           
+
             <div class="card">
-                <a href="../pages/chinese/Veg-manchurian.html"><img src="../images/chinese/veg-manchurian-recipe.jpg" /></a>
+                <a href="../pages/chinese/Veg-manchurian.html"><img
+                        src="../images/chinese/veg-manchurian-recipe.jpg" /></a>
                 <h2 class="item-name">Veg-manchurian</h2>
             </div>
 
@@ -132,12 +135,14 @@
         </div>
         <div class="row">
             <div class="card">
-                <a href="../pages/chinese/Hot And Sour soup.html"><img src="../images/chinese/hot-and-sour-soup.jpg" /></a>
+                <a href="../pages/chinese/Hot And Sour soup.html"><img
+                        src="../images/chinese/hot-and-sour-soup.jpg" /></a>
                 <h2 class="item-name">Hot And Sour soup</h2>
             </div>
 
             <div class="card">
-                <a href="../pages/chinese/Schezwan Noodles.html"><img src="../images/chinese/schezwan-noodles-1.jpg" /></a>
+                <a href="../pages/chinese/Schezwan Noodles.html"><img
+                        src="../images/chinese/schezwan-noodles-1.jpg" /></a>
                 <h2 class="item-name">Schezwan Noodles</h2>
             </div>
 
@@ -149,9 +154,11 @@
 
     </div>
     <div class="container">
-        <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;">  </i> Join Our Community Now!</h3>
-        <p class="last">Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</p>
-        <button class="btn">Join Now</button><br/>
+        <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;"> </i> Join Our Community
+            Now!</h3>
+        <p class="last">Join our Community and add on your own recipies! <br />Also get chance to interact with some
+            world famous chef's and get featured on our page!</p>
+        <a href="../pages/community.html"><button class="btn">Join now</button></a><br />
     </div>
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
