--- a/pages/starters.html
+++ b/pages/starters.html
@@ -97,14 +97,14 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
-                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
-                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
-                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
-                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Chinese</a>
-                </li>
-
+                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../pages/about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+                <li><a href="../pages/community.html"><i class="fa-solid fa-users" aria-hidden="true"></i> Join Us</a></li>
             </ul>
         </div>
     </div>
@@ -156,7 +156,7 @@
             Now!</h3>
         <p>Join our Community and add on your own recipies! <br />Also get chance to interact with some world famous
             chef's and get featured on our page!</p>
-        <button class="btn">Join Now</button><br />
+        <a href="../pages/community.html"><button class="btn">Join now</button></a><br />
     </div>
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
