--- a/pages/street-food.html
+++ b/pages/street-food.html
@@ -51,7 +51,7 @@
         }
 
         img {
-            height: 250px;  
+            height: 500px;  
             position: relative;
             border-radius: 10px;
             box-shadow:0 0 10px 3px #a3a3a3;
@@ -69,7 +69,7 @@
         .item-name{
             font-size: 30px; 
             position: absolute;
-            top: 180px;
+            top: 450px;
             left: 10px;
         }
 
@@ -94,14 +94,14 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
-                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
-                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
-                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
-                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Chinese</a>
-                </li>
-
+                <li><a href="../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../pages/about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+                <li><a href="../pages/community.html"><i class="fa-solid fa-users" aria-hidden="true"></i> Join Us</a></li>
             </ul>
         </div>
     </div>
@@ -128,14 +128,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="card">
-                <a href="../pages/street-food/samosa-recipes.html"><img src="../images/street-food/samosaa.jpg" /></a>
-                <h2 class="item-name">Samosa</h2>
-            </div>
-
+            
             <div class="card">
                 <a href="../pages/street-food/sandwich-recipe.html"><img src="../images/street-food/sandwich.jpg" /></a>
                 <h2 class="item-name">Sandwich</h2>
+            </div>
+
+            <div class="card">
+                <a href="../pages/street-food/samosa-recipes.html"><img src="../images/street-food/samosaa.jpg" /></a>
+                <h2 class="item-name" style="color: white;">Samosa</h2>
             </div>
 
             <div class="card">
@@ -148,7 +149,7 @@
     <div class="container">
         <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;">  </i> Join Our Community Now!</h3>
         <p>Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</p>
-        <button class="btn">Join Now</button><br/>
+        <a href="../pages/community.html"><button class="btn">Join now</button></a><br />
     </div>
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
