--- a/pages/veg/aalu-pakodi.html
+++ b/pages/veg/aalu-pakodi.html
@@ -11,6 +11,22 @@
 </head>
 
 <body>
+    <nav>
+        <div class="menu">
+            <div class="logo">
+                <a href="../../index.html">Foodicted</a>
+            </div>
+            <ul>
+                <li><a href="../../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <div class="container">
         <h1 class="page-heading"> Aalu Pakodi</h1>
@@ -18,7 +34,7 @@
     <div class="container">
         <h3 class="sub-heading"><i class="fa-regular fa-comments" style="color: #000000;"></i> About</h3>
         <p><b>Aalu Pakodi is popular Maharashtrian street food. This can be served with a hot cup of tea/coffee or with
-            dipping sauces like ketchup Or batata vada can be used while making Aalu Pakodi.</b></p>
+                dipping sauces like ketchup Or batata vada can be used while making Aalu Pakodi.</b></p>
         <br />
     </div>
     <div class="content">
@@ -28,42 +44,43 @@
         <div class="container-1">
             <h3 class="sub-heading"><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i> Ingredients:</h3>
             <ul>
-<li>Gram Flour </li>
-<li>salt</li>
-<li>Spices</li>
-<li>Corn Flour</li> 
-<li>Chat Masala Powder</li>
+                <li>Gram Flour </li>
+                <li>salt</li>
+                <li>Spices</li>
+                <li>Corn Flour</li>
+                <li>Chat Masala Powder</li>
             </ul>
         </div>
     </div>
     <div class="container">
         <h1 class="sub-heading"><i class="fa-solid fa-arrows-spin" style="color: #000000;"></i> Steps To Cook:</h1>
-        <ol class="steps">
-            
-            <h1>INSTRUCTIONS:-</h1> 
-             <li>
-                Firstly, peel the skin of potato and slice thinly.</br>
-                2.Rinse in cold water to remove off starch from potatoes.</br>
-                 3.Now pat dry to remove of excess water. keep aside.</br>
-                4.Further, prepare besan batter by taking ¾ cup besan and 2 tbsp rice flour in a mixing bowl.</br>
-                 5.Also add ¼ tsp turmeric, ½ tsp chilli powder, ½ tsp chaat masala, a pinch of hing / asafoetida, 1 tsp ginger garlic paste and ½ tsp salt.</br>
-                 6.Combine all the ingredients well.</br>
-                 7.Add in ½ cup water and whisk smooth.</br>
-                 8.Make a smooth batter without forming any lumps.</br>
-                 9.Also, add a pinch of baking soda and mix gently. do not over mix as baking soda will lose its property.</br>
-                 10.Make sure the batter is flowing consistency.</br>
-                 11.Dip the sliced potato into prepared besan batter and coat it completely.</br>
-                 12.Furthermore, deep fry in hot oil.</br>
-                 13.Also stir occasionally and fry on both sides.</br>
-                 14.Further, fry the potatoes till they turn golden brown </br>
-                 15.Finally, aloo pakora recipe or potato bajji is ready to serve. </br> </li>                   
-       </div>
+        <ol class="steps" type="none">
+
+
+            <li>Firstly, peel the skin of potato and slice thinly.</li>
+            <li>Rinse in cold water to remove off starch from potatoes.</li>
+            <li>Now pat dry to remove of excess water. keep aside.</li>
+            <li>Further, prepare besan batter by taking ¾ cup besan and 2 tbsp rice flour in a mixing bowl.</li>
+            <li>Also add ¼ tsp turmeric, ½ tsp chilli powder, ½ tsp chaat masala, a pinch of hing / asafoetida, 1 tsp
+                ginger garlic paste and ½ tsp salt.</li>
+            <li>Combine all the ingredients well.</li>
+            <li>Add in ½ cup water and whisk smooth.</li>
+            <li>Make a smooth batter without forming any lumps.</li>
+            <li>Also, add a pinch of baking soda and mix gently. do not over mix as baking soda will lose its property.
+            </li>
+            <li>.Make sure the batter is flowing consistency.</li>
+            <li>.Dip the sliced potato into prepared besan batter and coat it completely.</li>
+            <li>.Furthermore, deep fry in hot oil.</li>
+            <li>.Also stir occasionally and fry on both sides.</li>
+            <li>.Further, fry the potatoes till they turn golden brown </li>
+            <li>.Finally, aloo pakora recipe or potato bajji is ready to serve. </li>         
+    </div>
     <div class="container">
         <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;"> </i> Join Our Community
             Now!</h3>
         <p>Join our Community and add on your own recipies! <br />Also get chance to interact with some world famous
             chef's and get featured on our page!</p>
-        <button class="btn">Join Now</button><br />
+            <a href="../community.html"><button class="btn">Join now</button></a><br />
     </div>
 
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
