--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <title> Foodicted</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="images/chef.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 </head>
 
@@ -18,13 +19,14 @@
         <a href="index.html">Foodicted</a>
       </div>
       <ul>
-        <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
-        <li><a href="pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i>Starters</a></li>
-        <li><a href="pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Veg</a></li>
-        <li><a href="pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i>Non-veg</a></li>
-        <li><a href="pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i>Street Food</a></li>
-        <li><a href="pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i>Chinese</a>
-        </li>
+        <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+        <li><a href="pages/about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+        <li><a href="pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+        <li><a href="pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+        <li><a href="pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+        <li><a href="pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+        <li><a href="pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+        
       </ul>
     </div>
   </nav>
@@ -33,16 +35,15 @@
       <h6><i>Are You Hungry...?</i></h6>
     </div>
     <div class="sub_title"><b>Don't Wait..!</b><br />
-      Let start to order food now.
+      Cook your favourite recipe now!!
     </div>
-    <div class="btns">
-      <button>Check out recipies</button>
+    <div class="btn">
+      <a href="pages/community.html"><button>Join our Community</button></a>
     </div>
     <div>
       <section>
         <footer>
           <p>2024 All rights reserved by Foodicted.</p>
-
         </footer>
       </section>
     </div>
