--- a/pages/chinese/Fried-rice.html
+++ b/pages/chinese/Fried-rice.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <nav>
+        <div class="menu">
+          <div class="logo">
+            <a href="../../index.html">Foodicted</a>
+          </div>
+          <ul>
+            <li><a href="../../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+          </ul>
+        </div>
+      </nav>
 
     <div class="container">
         <h1 class="page-heading">Schezwan Fried Rice</h1>
@@ -68,7 +84,7 @@
     <div class="container">
         <h3 class="sub-heading"><i class="fa-solid fa-right-to-bracket" style="color: #000000;"></i> Join Our Community Now!</h3>
         <p class="last">Join our Community and add on your own recipies! <br/>Also get chance to interact with some world famous chef's and get featured on our page!</center></p>
-        <button class="btn">Join Now</button><br/>
+        <a href="../community.html"><button class="btn">Join now</button></a><br />
     </div>
     
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
