--- a/pages/non-veg/ChickenLollipop.html
+++ b/pages/non-veg/ChickenLollipop.html
@@ -9,12 +9,28 @@
     <link rel="icon" href="../../images/chef.png" />
 
 <body>
+    <nav>
+        <div class="menu">
+            <div class="logo">
+                <a href="../../index.html">Foodicted</a>
+            </div>
+            <ul>
+                <li><a href="../../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <h1 class="page-heading"> Chicken Lolipop</h1>
     </div>
     <div class="content">
         <div class="main-img">
-            <img src="../../images/non-veg/Chicken-lolipop.webp">
+            <img src="../../images/non-veg/Chicken-lolipop.jpg">
         </div>
         <div class="container-1">
             <h3 class="sub-heading"><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i> Ingredients:</h3>
@@ -65,10 +81,10 @@
             Now!</h3>
         <p>Join our Community and add on your own recipies! <br />Also get chance to interact with some world famous
             chef's and get featured on our page!</p>
-        <button class="btn">Join Now</button><br />
+            <a href="../community.html"><button class="btn">Join now</button></a><br />
     </div>
 
-
+    <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
