--- a/pages/non-veg/Chickenmasala.html
+++ b/pages/non-veg/Chickenmasala.html
@@ -10,13 +10,28 @@
 </head>
 
 <body>
-
+    <nav>
+        <div class="menu">
+          <div class="logo">
+            <a href="../../index.html">Foodicted</a>
+          </div>
+          <ul>
+            <li><a href="../../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+          </ul>
+        </div>
+      </nav>
     <div class="container">
         <h1 class="page-heading"> Chicken Curry Masala </h1>
     </div>
     <div class="content">
         <div class="main-img">
-            <img src="../../images/non-veg/chicken-masala.webp" class="item1" />
+            <img src="../../images/non-veg/chicken-masala.jpg" class="item1" />
         </div>
         <div class="container-1">
             <h3 class="sub-heading"><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i> Ingredients:</h3>
@@ -65,7 +80,7 @@
             Now!</h3>
         <p>Join our Community and add on your own recipies! <br />Also get chance to interact with some world famous
             chef's and get featured on our page!</p>
-        <button class="btn">Join Now</button><br />
+            <a href="../community.html"><button class="btn">Join now</button></a><br />
     </div>
 
     <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
