--- a/pages/street-food/sandwich-recipe.html
+++ b/pages/street-food/sandwich-recipe.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <nav>
+        <div class="menu">
+          <div class="logo">
+            <a href="../../index.html">Foodicted</a>
+          </div>
+          <ul>
+            <li><a href="../../index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                <li><a href="../about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
+                <li><a href="../starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
+                <li><a href="../chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
+                <li><a href="../street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
+                <li><a href="../veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
+                <li><a href="../Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+          </ul>
+        </div>
+      </nav>
     <div class="container">
         <h1 class="page-heading">Sandwich</h1>
     </div>
@@ -22,9 +38,9 @@
             <ul>
                 <li>bread-8 pcs</li>
                 <li>garlic paste</li>
-                <li>green chilli paste</li>     
+                <li>green chilli paste</li>
                 <li>cumin powder-1/2 tablespoon.</li>
-                <li>cumin powder-1/2.</li> 
+                <li>cumin powder-1/2.</li>
                 <li>garam masala</li>
                 <li>salt-as require</li>
                 <li>tomato-1/2 pcs</li>
@@ -32,7 +48,7 @@
                 <li>mayonnaise-1/2 cup</li>
                 <li>greek yogurt-2/3 cup</li>
                 <li>garlic-4 cloves</li>
-                <li>schezwan chautney-1 teaspoon</li> 
+                <li>schezwan chautney-1 teaspoon</li>
             </ul>
         </div>
     </div>
@@ -40,15 +56,17 @@
         <h1 class="sub-heading"><i class="fa-solid fa-arrows-spin" style="color: #000000;"></i> Steps To Cook:</h1>
         <ol class="steps">
             <li>In a large mixing bowl add the onions, capsicum, tomatoes, green chillies, coriander leaves,
- boiled and mashed potato, salt, chaat masala and black pepper powder and mix well.</li>
-<li>Once mixed add the mayonnaise and mix the stuffing well.</li>
-<li>Take 2 slices of bread and generously apply the stuffing on both the slices of bread evenly.</li>
-<li>Place 1 cheese slice on top of one of the stuffing and land the other bread with the stuffing on, on top of the cheese slice.</li>
-<li>Now apply butter on the top side of the breadc
-Land the buttered side bread on the pan and cook till it turns golden brown in colour.</li>
-<li>Then apply butter on the other slice of bread and cook this side as well till it turns golden in colour.</li>
-<li>Once both sides are grilled then remove them on a plate and cut diagonally and enjoy while 
-it's hot with some tomato ketchup or some spicy green chutney.</li>
+                boiled and mashed potato, salt, chaat masala and black pepper powder and mix well.</li>
+            <li>Once mixed add the mayonnaise and mix the stuffing well.</li>
+            <li>Take 2 slices of bread and generously apply the stuffing on both the slices of bread evenly.</li>
+            <li>Place 1 cheese slice on top of one of the stuffing and land the other bread with the stuffing on, on top
+                of the cheese slice.</li>
+            <li>Now apply butter on the top side of the breadc
+                Land the buttered side bread on the pan and cook till it turns golden brown in colour.</li>
+            <li>Then apply butter on the other slice of bread and cook this side as well till it turns golden in colour.
+            </li>
+            <li>Once both sides are grilled then remove them on a plate and cut diagonally and enjoy while
+                it's hot with some tomato ketchup or some spicy green chutney.</li>
         </ol>
     </div>
     <div class="container">
@@ -56,5 +74,9 @@ it's hot with some tomato ketchup or some spicy green chutney.</li>
             Now!</h3>
         <p>Join our Community and add on your own recipies! <br />Also get chance to interact with some world famous
             chef's and get featured on our page!</p>
-        <button class="btn">Join Now</button><br />
+            <a href="../community.html"><button class="btn">Join now</button></a><br />
     </div>
+    <script src="https://kit.fontawesome.com/14a1a7dd00.js" crossorigin="anonymous"></script>
+</body>
+
+</html>
