--- a/pages/veg.html
+++ b/pages/veg.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veg</title>
+    <title>Veg recceipe</title>
     <link rel="stylesheet" href="../css/starters.css">
     <link rel="icon" href="../../images/chef.png"/>
     
@@ -22,7 +22,7 @@
         }
        
         body {
-            background-color: black;
+            background-color: rgb(26, 22, 22);
             margin: 0;
             padding: 0;
         }
@@ -77,52 +77,46 @@
             position: relative;
         }
 
-        ul{
-            color: white;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1 class="page-headings">Tasty And Delicious Veg Food</h1>
+        <h1 class="page-headings">Indian's Veg Receipe</h1>
         <hr/>
-        <p>The simple act of becoming a vegetarian will make a difference in the health of our planet. </p>
+        <p><h4> Eating green to keep the planet clean. Let's Make Delicious Food.... </h4></p>
 
-        <h3 class="sub-heading">Enjoy Your favourite Veg Recipies here!</h3>
+        <h3 class="sub-heading">Enjoy Your healthy Meal Recipies here!</h3>
         <div class="row">
             <div class="card">
-                <a href="../pages/veg/aalu-pakodi.html"><img src="../images/veg/aalu-pakodi.jpeg" /></a>
-                <h2 class="item-name">Aalu Pakodi</h2>
+                <a href="./pages/veg/veg-biryani.html"><img src="../images/veg/veg biryani.jpg">  </a>
+                <h2 class="item-name">biryani</h2>
             </div>
 
             <div class="card">
-                <a href="../pages/veg/dal-makhani.html"><img src="../images/veg/dal-makhani.jpg"> </a>
-                <h2 class="item-name">Dal Mhakhni</h2>
+                <a href="/pages/veg/veg-curry.html"><img src="../images/veg/veg curry.jpg"/></a>
+                <h2 class="item-name">Dal Makhani</h2>
             </div>
 
             <div class="card">
-                <a href="../pages/veg/panner-butter-masala.html"><img src="../images/veg/butter-panner-masala.jpeg" /></a>
-                <h2 class="item-name">Paneer Butter</h2>
+                <a href="/pages/starters/cookies.html"><img src="" /></a>
+                <h2 class="item-name">Eggless Cookies</h2>
             </div>
         </div>
         <div class="row">
             <div class="card">
-                <a href="../pages/veg/veg-biryani.html"><img src="../images/veg/veg biryani.jpg" /></a>
-                <h2 class="item-name">Veg Biryani</h2>
+                <a href="/pages/starters/paneer-65.html"><img src="../images/paneer-65-recipe.jpg" /></a>
+                <h2 class="item-name">Paneer 65</h2>
             </div>
 
             <div class="card">
-                <a href="../pages/veg/veg-curry.html"><img src="../images/veg/veg-curry.jpeg" /></a>
-                <h2 class="item-name">Veg Curry</h2>
+                <a href="/pages/starters/paneer-tikka.html"><img src="../images/paneer-tikka-recipe.jpg" /></a>
+                <h2 class="item-name">Paneer Tikka</h2>
             </div>
 
             <div class="card">
-                <a href="../pages/veg/veg-cutlet.html"><img src="../images/veg/veg-cutlet.jpeg" /></a>
-                <h2 class="item-name">Veg Cutlet</h2>
+                <a href="/pages/starters/methi-muthia.html"><img src="../images/methi-muthia-recipe.jpg" /></a>
+                <h2 class="item-name">Methi Muthia</h2>
             </div>
         </div>
 
