Added Readme Files

--- a/pages/about.html
+++ b/pages/about.html
@@ -67,7 +67,7 @@
         <h1 class="sub-heading"><i class="fa-solid fa-list-ul" style="color: #000000;"></i> Our Recipes</h1>
     </div>
     <div class="container content" style="width: 50%;">
-        <div><img src="../images/starters.jpg" /></div>
+        <div><img src="../images/about/starters.jpg" /></div>
         <div class="arrange">
             <h4 class="sub">1. Starters</h4>
             <p>Check Out The Recipies Now!</p>
@@ -82,11 +82,11 @@
             <p>Check Out The Recipies Now!</p>
             <a href="../pages/chinese.html"><button class="btn">Go To Recipies</button></a><br />
         </div>
-        <div><img src="../images/chinese.jpg" /></div>
+        <div><img src="../images/about/chinese.jpg" /></div>
     </div>
 
     <div class="container content" style="width: 50%;">
-        <div><img src="../images/street food.jpg" /></div>
+        <div><img src="../images/about/street food.jpg" /></div>
         <div class="arrange">
             <h4 class="sub">3. Street-food</h4>
             <p>Check Out The Recipies Now!</p>
@@ -101,11 +101,11 @@
             <p>Check Out The Recipies Now!</p>
             <a href="../pages/veg.html"><button class="btn">Go To Recipies</button></a><br />
         </div>
-        <div><img src="../images/veg.jpg" /></div>
+        <div><img src="../images/about/veg.jpg" /></div>
     </div>
 
     <div class="container content" style="width: 50%;">
-        <div><img src="../images/non-veg.jpg" /></div>
+        <div><img src="../images/about/non-veg.jpg" /></div>
         <div class="arrange">
             <h4 class="sub">5. Non-Veg</h4>
             <p>Check Out The Recipies Now!</p>
