--- a/pages/community.html
+++ b/pages/community.html
@@ -33,25 +33,24 @@
     <div class="container">
         <h1 class="page-headings">Join Us!</h1>
     </div>
-    <div class="container row">
+    <div class="container">
         <div>
             <h1>Name:</h1>
         </div>
         <div><input type="text" placeholder="Enter Your Name" required></div>
     </div>
-    <div class="container row">
+    <div class="container">
         <div>
             <h1>Contact:</h1>
         </div>
         <div><input type="text" placeholder="Enter Your Contact No." required></div>
     </div>
-    <div class="container row">
+    <div class="container">
         <div>
             <h1>E-Mail:</h1>
-        </div>
-        <div><input type="email" placeholder="Enter Your E-Mail" required></div>
+        <input type="email" placeholder="Enter Your E-Mail" required></div>
     </div>
-    <div class="container row">
+    <div class="container">
         <div>
             <h1>Profession:</h1>
         </div>
