--- a/pages/about.html
+++ b/pages/about.html
@@ -48,7 +48,7 @@
             It is not just the recipe website, it is the community where the food lovers/cooking beginners discuss about
             their successes, failures, learning process in the kitchen. You can also be the part of the community!</p>
         <a href="../pages/community.html"><button class="btn">Join now</button></a><br />
-    </div>
+    </div><br/>
     <div class="container">
         <h1 class="sub-heading"><i class="fa-solid fa-list-ul" style="color: #000000;"></i> Our Recipes</h1>
     </div>
@@ -97,7 +97,7 @@
             <p>Check Out The Recipies Now!</p>
             <a href="../pages/Non veg.html"><button class="btn">Go To Recipies</button></a><br />
         </div>
-    </div>
+    </div><br/>
 
     <div class="container">
         <h1 class="sub-heading"><i class="fa-regular fa-comment-dots" style="color: #000000;"></i> User Feedbacks</h1>
@@ -159,7 +159,7 @@
             </p>
             <p>--Jyoti Patil</p>
         </div>
-    </div>
+    </div><br/>
 
     <div class="container">
         <h1 class="sub-heading"> From The Makers <i class="fa-solid fa-hand-holding-heart" style="color: #000000;"></i>
