--- a/pages/community.html
+++ b/pages/community.html
@@ -58,6 +58,23 @@
     </div>
     <div class="container"><br/>
         <button class="btn" type="submit">Join Us</button><br/>
+    </div><br/>
+    <div class="container">
+        <h1 class="sub-heading"><i class="fa-solid fa-heart" style="color: #000000;"></i> Connect With Us</h1>
+    </div>
+    <div class="content">
+        <div class="card">
+            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-square-whatsapp" style="color: #000000;"></i> Whatsapp</a>
+        </div>
+        <div class="card">
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram" style="color: #000000;"></i> Instagram</a>
+        </div>
+        <div class="card">
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook" style="color: #000000;"></i> Facebook</a>
+        </div>
+        <div class="card">
+            <a href="https://twitter.com/"><i class="fa-brands fa-square-x-twitter" style="color: #000000;"></i> Twitter</a>
+        </div>
     </div>
 
 
