--- a/pages/chinese/hakka-noodles.html
+++ b/pages/chinese/hakka-noodles.html
@@ -42,6 +42,7 @@
         <div class="container-1">
             <h3 class="sub-heading"><i class="fa-solid fa-cart-shopping" style="color: #000000;"></i> Ingredients:</h3>
             <ul>
+                <li>Red Bell Proper</li>
                 <li>Green Bell Proper</li>
                 <li>Yellow Bell Proper</li>
                 <li>Green onion</li>
