--- a/pages/about.html
+++ b/pages/about.html
@@ -231,7 +231,7 @@
                 <i class="fa-solid fa-quote-right" style="color: #000000;"></i>
             </p>
             <h1 class="sub">Neha Jadhav</h1>
-            <h3 class="designation">Starters Recipie Head</h3>
+            <h3 class="designation">Non-Veg Recipie Head</h3>
         </div>
 
     </div>
