--- a/pages/about.html
+++ b/pages/about.html
@@ -190,7 +190,7 @@
 
         <div class="card1">
             <img src="../images/makers/Tejasvi Bread.jpg" class="makersimg1">
-            <h1 class="sub">Tejasvi Bread</h1>
+            <h1 class="sub">Tejasvi Berad</h1>
             <h3 class="designation">Chinese Recipie Head</h3>
             <p><i class="fa-solid fa-quote-left" style="color: #000000;"></i>
                 Hello Foodies! I am Tejasvi. I have designed simple chinese recipies for you weekends. Enjoy Chinese!!
