--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <a href="index.html">Foodicted</a>
       </div>
       <ul>
-        <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-        <li><a href="pages/about.html"><i class="fa-solid fa-circle-info" aria-hidden="true"></i> About Us</a></li>
-        <li><a href="pages/starters.html"><i class=" fa fa-pizza-slice" aria-hidden="true"></i> Starters</a></li>
-        <li><a href="pages/chinese.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Chinese</a></li>
-        <li><a href="pages/street-food.html"><i class="fa fa-burger" aria-hidden="true"></i> Street Food</a></li>
-        <li><a href="pages/veg.html"><i class="fa-solid fa-bowl-food" aria-hidden="true"></i> Veg</a></li>
-        <li><a href="pages/Non veg.html"><i class="fa fa-drumstick-bite" aria-hidden="true"></i> Non-veg</a></li>
+        <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="pages/about.html"><i class="fa-solid fa-circle-info"></i> About Us</a></li>
+        <li><a href="pages/starters.html"><i class=" fa fa-pizza-slice"></i> Starters</a></li>
+        <li><a href="pages/chinese.html"><i class="fa-solid fa-bowl-food"></i> Chinese</a></li>
+        <li><a href="pages/street-food.html"><i class="fa fa-burger"></i> Street Food</a></li>
+        <li><a href="pages/veg.html"><i class="fa-solid fa-bowl-food"></i> Veg</a></li>
+        <li><a href="pages/Non veg.html"><i class="fa fa-drumstick-bite"></i> Non-veg</a></li>
         
       </ul>
     </div>
