--- a/pages/community.html
+++ b/pages/community.html
@@ -63,16 +63,16 @@
         <h1 class="sub-heading"><i class="fa-solid fa-heart" style="color: #000000;"></i> Connect With Us</h1>
     </div>
     <div class="content">
-        <div class="card">
+        <div class="container">
             <a href="https://web.whatsapp.com/"><i class="fa-brands fa-square-whatsapp" style="color: #000000;"></i> Whatsapp</a>
         </div>
-        <div class="card">
+        <div class="container">
             <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram" style="color: #000000;"></i> Instagram</a>
         </div>
-        <div class="card">
+        <div class="container">
             <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook" style="color: #000000;"></i> Facebook</a>
         </div>
-        <div class="card">
+        <div class="container">
             <a href="https://twitter.com/"><i class="fa-brands fa-square-x-twitter" style="color: #000000;"></i> Twitter</a>
         </div>
     </div>
